--- a/portal-uct/.env
+++ b/portal-uct/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlsrv
-DB_HOST=181.162.127.73
+DB_HOST=127.0.0.1
 DB_PORT=1433
 DB_DATABASE=RPE
 DB_USERNAME=sa
-DB_PASSWORD=Temuco.2022
+DB_PASSWORD=Solitario12
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
